# Scatty

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/scatty/: __init__.py  cross_section.py  rates.py  wrapper.py
src/scatty/src/: Makefile  cross_section.c  cross_section.h  integration.c  integration.h  rates.c  rates.h  scatty  scatty.c  tools.c  tools.h
src/scatty/src/cephes/: complex.h
src_c/: build.sh  cross_section.c  cross_section.h  integration.c  integration.h
src_py/scatty/: core.py
src_py/scatty.egg-info/: PKG-INFO  SOURCES.txt
